add image to article home

--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
 <body>
 	<header id="main_header">
 		<div class="flex-container">
-			<span class="image_frame">
-				<img src="https://avatars.githubusercontent.com/u/5982932?v=4" width="48" height="48" alt="Logo">
-			</span>
+			<figure class="header_fig">
+				<span class="image_frame">
+					<img src="https://avatars.githubusercontent.com/u/5982932?v=4" width="48" height="48" alt="Logo">
+				</span>
+				<figcaption class="header_figcaption">
+					<span class="header_fig_heading">CUBE<span class="smaller">INTHE</span>BOX</span>
+				</figcaption>
+			</figure>
 
 			<button id="open_menu" class="menu">
 				<svg xmlns="http://www.w3.org/2000/svg" height="48" width="48"><path d="M6 36V33H42V36ZM6 25.5V22.5H42V25.5ZM6 15V12H42V15Z"/></svg>
@@ -23,10 +28,10 @@
 	<nav id="main_drawer">
 		<menu class="main_menu">
 			<li class="menu_item">
-				<a href="#" title="Item menu">Menu item</a>
+				<a href="/estudios_generales/exercise-one/contacto" title="Item menu">Contacto</a>
 			</li>
 			<li class="menu_item">
-				<a href="#" title="Item menu">Menu item</a>
+				<a href="/estudios_generales/exercise-one/" title="Item menu">Inicio</a>
 			</li>
 			<li class="menu_item">
 				<a href="#" title="Item menu">Menu item</a>
@@ -46,6 +51,14 @@
 					</div>
 				</header>
 				<section class="article_section">
+					<figure class="article_fig">
+						<div class="image_frame">
+							<img src="//unsplash.it/1280/720/" width="1280" height="720" alt="Featured image">
+						</div>
+						<figcaption class="article_figcaption">
+							<h4 class="article_fig_heading">Imagen de unsplash it (AKA Picsum)</h4>
+						</figcaption>
+					</figure>
 					<p>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et <strong>dolore magna aliqua.</strong> Ut enim ad minim veniam,
