--- a/index.html
+++ b/index.html
@@ -143,9 +143,21 @@
 	</main>
 	<footer id="main_footer">
 		<ul class="footer_list">
-			<li class="footer_list_item">Este es item en el footer</li>
-			<li class="footer_list_item">Este es item en el footer</li>
-			<li class="footer_list_item">Este es item en el footer</li>
+			<li class="footer_list_item">
+				<a href="https://twitter.com/helagone">
+					TW
+				</a>
+			</li>
+			<li class="footer_list_item">
+				<a href="https://www.instagram.com/helagone/">
+					IG
+				</a>
+			</li>
+			<li class="footer_list_item">
+				<a href="https://www.facebook.com/cubeinthebox/">
+					FB
+				</a>
+			</li>
 		</ul>
 	</footer>
 	<script type="text/javascript" src="js/script.js"></script>
