homework excercise two

--- a/excercise-two/index.html
+++ b/excercise-two/index.html
@@ -32,13 +32,14 @@
 	</header>
 	<main class="main_container">
 		<section class="section_container">
-			<span>01</span>
-			<h1>Cube in the box</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat.</p>
-			<div>
+			<span class="pub_number">01</span>
+			<h1 class="main_heading">Clarify the vision.</h1>
+			<p>
+				In publishing and graphic design, Lorem <br>
+				ipsum is a placeholder text commonly used to <br>
+				demonstrate the visual form of a document or
+			</p>
+			<div class="flex-container play-section">
 				<div class="btn_play">
 					<img src="assets/play.svg" alt="Play button">
 				</div>
