--- a/digital-poster/index.html
+++ b/digital-poster/index.html
@@ -3,7 +3,19 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Eats the Dust</title>
+	<title>Eats the Dust - hela.dev</title>
+	<meta name="description" content="Este es un estudio sobre el comportamiento de los accidentes fatales en motocicleta antes, durante y después de la pandemia de COVID-19 en 2020.">
+
+	<meta property="og:title" content="Eats the Dust" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://hela.dev/datavis/motos-cdmx/" />
+	<meta property="og:image" content="https://hela.dev/datavis/motos-cdmx/moto-ajusco.jpg" />
+	<meta property="og:image:secure_url" content="https://hela.dev/datavis/motos-cdmx/moto-ajusco.jpg" />
+	<meta property="og:image:type" content="image/jpg" />
+	<meta property="og:image:width" content="1280" />
+	<meta property="og:image:height" content="720" />
+	<meta property="og:image:alt" content="Un accidente fatal en motocicleta en la carretera Picacho-Ajusco" />
+
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;500;800&display=swap" rel="stylesheet">
@@ -52,7 +64,7 @@
 			<div class="mapas_scroller flex-container">
 				<figure class="fig_mapa">
 					<div class="image_frame">
-						<img src="./assets/mapa_accid_2018.svg" alt="Mapa uno: Accidentes en motocicleta durante 2018" width="1080" height="1270">
+						<img src="./assets/mapa_accid_2018.svg" alt="Mapa uno: Accidentes en motocicleta durante 2018" width="1080" height="1270" loading="lazy">
 					</div>
 					<figcaption class="mapa_caption">
 						<h3>Accidentes en motocicleta durante 2018</h3>
@@ -60,7 +72,7 @@
 				</figure>
 				<figure class="fig_mapa">
 					<div class="image_frame">
-						<img src="./assets/mapa_accid_2019_v2.svg" alt="Mapa uno: Accidentes en motocicleta durante 2019" width="1080" height="1270">
+						<img src="./assets/mapa_accid_2019_v2.svg" alt="Mapa uno: Accidentes en motocicleta durante 2019" width="1080" height="1270" loading="lazy">
 					</div>
 					<figcaption class="mapa_caption">
 						<h3>Accidentes en motocicleta durante 2018</h3>
@@ -68,7 +80,7 @@
 				</figure>
 				<figure class="fig_mapa">
 					<div class="image_frame">
-						<img src="./assets/mapa_accid_2020_v2.svg" alt="Mapa uno: Accidentes en motocicleta durante 2020" width="1080" height="1270">
+						<img src="./assets/mapa_accid_2020_v2.svg" alt="Mapa uno: Accidentes en motocicleta durante 2020" width="1080" height="1270" loading="lazy">
 					</div>
 					<figcaption class="mapa_caption">
 						<h3>Accidentes en motocicleta durante 2020</h3>
@@ -76,7 +88,7 @@
 				</figure>
 				<figure class="fig_mapa">
 					<div class="image_frame">
-						<img src="./assets/mapa_accid_2021_v2.svg" alt="Mapa uno: Accidentes en motocicleta durante 2021" width="1080" height="1270">
+						<img src="./assets/mapa_accid_2021_v2.svg" alt="Mapa uno: Accidentes en motocicleta durante 2021" width="1080" height="1270" loading="lazy">
 					</div>
 					<figcaption class="mapa_caption">
 						<h3>Accidentes en motocicleta durante 2021</h3>
@@ -101,7 +113,7 @@
 				<h3>Contexto histórico</h3>
 				<div class="flex-container-desk">
 					<figure class="fig_graph square">
-						<img src="./assets/charts/bar-chart-todos-anos.svg" width="800" height="800" alt="Gráfica del aumento de accidentes de motocicleta">
+						<img src="./assets/charts/bar-chart-todos-anos.svg" width="800" height="800" alt="Gráfica del aumento de accidentes de motocicleta" loading="lazy">
 						<figcaption class="fig_graph_caption">
 							<h4>Número de accidentes de tránsito anuales en México de 1998 a 2021.</h4>
 						</figcaption>
@@ -114,7 +126,7 @@
 					</p>
 				</div>
 				<figure class="fig_graph rect">
-					<img src="./assets/charts/dot-chart-all-years.svg" width="1440" height="810" alt="Incremento en los accidentes en motocicleta de 1997 a 2021">
+					<img src="./assets/charts/dot-chart-all-years.svg" width="1440" height="810" alt="Incremento en los accidentes en motocicleta de 1997 a 2021" loading="lazy">
 					<figcaption class="fig_graph_caption">
 						<h4>Aumento en el número de accidentes en motocicleta en México de 1997 a 2021.</h4>
 					</figcaption>
@@ -132,7 +144,7 @@
 				<h3>Contexto actual</h3>
 				<div class="flex-container-desk">
 					<figure class="fig_graph square">
-						<img src="./assets/charts/bar-chart-muertos-moto.svg" width="800" height="800" alt="Aumento en las fatalidades en accidentes de motocicleta">
+						<img src="./assets/charts/bar-chart-muertos-moto.svg" width="800" height="800" alt="Aumento en las fatalidades en accidentes de motocicleta" loading="lazy">
 						<figcaption class="fig_graph_caption">
 							<h4>Número de accidentes fatales en motocicleta en la CDMX de 2018 a 2021.</h4>
 						</figcaption>
@@ -143,7 +155,7 @@
 					</p>
 				</div>
 				<figure class="fig_graph rect">
-					<img src="./assets/charts/lines-moto.svg" width="1440" height="810" alt="Aumento en las muertes de motociclistas">
+					<img src="./assets/charts/lines-moto.svg" width="1440" height="810" alt="Aumento en las muertes de motociclistas" loading="lazy">
 					<figcaption class="fig_graph_caption">
 						<h4>Aumento en las muertes de motociclistas en CDMX de 2018 a 2021.</h4>
 					</figcaption>
@@ -154,7 +166,7 @@
 					por el contrario, se incrementó y la tendencia se mantuvo en 2021 aumentando 61.7% de 2019 a 2021.
 				</p>
 				<figure class="fig_graph rect">
-					<img src="./assets/charts/scatter-muertes-deleg.svg" width="1440" height="810" alt="Distribución de accidentes y fatalidades por delegación">
+					<img src="./assets/charts/scatter-muertes-deleg.svg" width="1440" height="810" alt="Distribución de accidentes y fatalidades por delegación" loading="lazy">
 					<figcaption class="fig_graph_caption">
 						<h4>Distribución de accidentes y fatalidades por delegación en CDMX de 2018 a 2021</h4>
 					</figcaption>
