no opener links

--- a/digital-poster/index.html
+++ b/digital-poster/index.html
@@ -9,8 +9,8 @@
 	<meta property="og:title" content="Eats the Dust" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://hela.dev/datavis/motos-cdmx/" />
-	<meta property="og:image" content="https://hela.dev/datavis/motos-cdmx/assets/moto-ajusco.jpg" />
-	<meta property="og:image:secure_url" content="https://hela.dev/datavis/motos-cdmx/assets/moto-ajusco.jpg" />
+	<meta property="og:image" content="https://hela.dev/datavis/motos-cdmx/assets/moto_ajusco.jpg" />
+	<meta property="og:image:secure_url" content="https://hela.dev/datavis/motos-cdmx/assets/moto_ajusco.jpg" />
 	<meta property="og:image:type" content="image/jpg" />
 	<meta property="og:image:width" content="1280" />
 	<meta property="og:image:height" content="720" />
@@ -133,7 +133,7 @@
 				</figure>
 				<p>
 					Aunque en otros países los accidentes en motocicleta se han reducido drásticamente, en México son un problema que incrementa 
-					junto con la tasa vehicular. <a href="./assets/pdf/accidentes_lesiones_motociclistas_mexico.pdf" title="PDF: Análisis de los accidentes y lesiones de los motociclistas en México">
+					junto con la tasa vehicular. <a href="./assets/pdf/accidentes_lesiones_motociclistas_mexico.pdf" target="_lank" rel="noopener nofollow" title="PDF: Análisis de los accidentes y lesiones de los motociclistas en México">
 					(Berrones-Sanz 2016)</a>. A pesar de las restricciones que se implementaron durante la Pandemia de 2020, ésta también trajo 
 					un fenómeno social en el que muchas personas perdieron sus empleos y al mismo tiempo la demanda de servicios de reparto 
 					a domicilio aumentó.
@@ -200,7 +200,7 @@
 					camioneta, microbús, motocicleta y camión urbano de pasajeros. Siendo las motocicletas el foco central de la investigación.
 				</p>
 				<p>
-					Se realizó un <a href="https://docs.google.com/forms/d/e/1FAIpQLScWciba7ExWmO1hqfk8PFL64aOTkwoadHiWaD6JkHdl-bR_KQ/viewform?usp=sf_link" title="Cuestionario para motociclistas que trabajan en reparto a domicilio por aplicación">
+					Se realizó un <a href="https://docs.google.com/forms/d/e/1FAIpQLScWciba7ExWmO1hqfk8PFL64aOTkwoadHiWaD6JkHdl-bR_KQ/viewform?usp=sf_link" target="_lank" rel="noopener nofollow" title="Cuestionario para motociclistas que trabajan en reparto a domicilio por aplicación">
 					cuestionario</a> (Luna H.E, Motos 2022, 2022, Google Forms) a once motociclistas que se dedican al reparto de alimentos 
 					a través de aplicaciones; se pudo observar que el 72.7% ha sufrido algún tipo de accidente; el 90.9% señala que no hay una cultura 
 					de respeto hacia los motociclistas. Sin embargo, solo el 45.5% de ellos ha tomado algún curso de conducción de motocicletas y el 
@@ -229,57 +229,57 @@
 					<h3>PDF</h3>
 					<ul class="ref_list">
 						<li class="ref_item">
-							<a href="./assets/pdf/02_original1.pdf" title="Casuística de accidentes de motocicleta y lesiones en los alumnos de la Escuela de Tráfico de la Guardia Civil">
+							<a href="./assets/pdf/02_original1.pdf" title="Casuística de accidentes de motocicleta y lesiones en los alumnos de la Escuela de Tráfico de la Guardia Civil" target="_lank" rel="noopener nofollow">
 								Casuística de accidentes de motocicleta y lesiones en los alumnos de la Escuela de Tráfico de la Guardia Civil
 							</a>
 						</li>
 						<li class="ref_item">
-							<a href="./assets/pdf/accidentes_lesiones_motociclistas_mexico.pdf" title="Análisis de los accidentes y las lesiones de los motociclistas en México">
+							<a href="./assets/pdf/accidentes_lesiones_motociclistas_mexico.pdf" title="Análisis de los accidentes y las lesiones de los motociclistas en México" target="_lank" rel="noopener nofollow">
 								Análisis de los accidentes y las lesiones de los motociclistas en México
 							</a>
 						</li>
 						<li class="ref_item">
-							<a href="./assets/pdf/CD_2155-MONICA_LISSETTE ANDRADE_TRIVINO.pdf" title="TRAUMAS POR ACCIDENTE DE VEHICULOS LIVIANOS TRATADOS EN LA EMERGENCIA DEL HOSPITAL DURAN">
+							<a href="./assets/pdf/CD_2155-MONICA_LISSETTE ANDRADE_TRIVINO.pdf" title="TRAUMAS POR ACCIDENTE DE VEHICULOS LIVIANOS TRATADOS EN LA EMERGENCIA DEL HOSPITAL DURAN" target="_lank" rel="noopener nofollow">
 								Traumas por accidente de vehícuolos livianos tratados en la emergencia del hospital Durán
 							</a>
 						</li>
 						<li class="ref_item">
-							<a href="./assets/pdf/Co-am122-02.pdf" title="Trauma craneoencefálico por accidente en motocicleta, PASTO 2003-2007">
+							<a href="./assets/pdf/Co-am122-02.pdf" title="Trauma craneoencefálico por accidente en motocicleta, PASTO 2003-2007" target="_lank" rel="noopener nofollow">
 								Trauma craneoencefálico por accidente en motocicleta, PASTO 2003-2007
 							</a>
 						</li>
 						<li class="ref_item">
-							<a href="./assets/pdf/Informe_SV_2020_Autorizado.pdf" title="Informe sobre la situación de la seguridad vial en México 2020">
+							<a href="./assets/pdf/Informe_SV_2020_Autorizado.pdf" title="Informe sobre la situación de la seguridad vial en México 2020" target="_lank" rel="noopener nofollow">
 								Informe sobre la situación de la seguridad vial en México 2020
 							</a>
 						</li>
 						<li class="ref_item">
-							<a href="./assets/pdf/LGMSV.pdf" title="Ley general de movilidad y seguridad vial">
+							<a href="./assets/pdf/LGMSV.pdf" title="Ley general de movilidad y seguridad vial" target="_lank" rel="noopener nofollow">
 								Ley general de movilidad y seguridad vial
 							</a>
 						</li>
 						<li class="ref_item">
-							<a href="./assets/pdf/MAURICIO_CABANAS MORALES-CARLA_PAMELA GONZALEZ_PLAZA_CYC.pdf" title="Prevención de accidentes en motocicleta. Plan de comunicación para fomentar la cultura vial en los jóvenes de San Lorenzo Tezonco">
+							<a href="./assets/pdf/MAURICIO_CABANAS MORALES-CARLA_PAMELA GONZALEZ_PLAZA_CYC.pdf" title="Prevención de accidentes en motocicleta. Plan de comunicación para fomentar la cultura vial en los jóvenes de San Lorenzo Tezonco" target="_lank" rel="noopener nofollow">
 								Prevención de accidentes en motocicleta. Plan de comunicación para fomentar la cultura vial en los jóvenes de San Lorenzo Tezonco
 							</a>
 						</li>
 						<li class="ref_item">
-							<a href="./assets/pdf/accidentes_fracturas_expuestas_guatemala.pdf" title="FRACTURAS ABIERTAS DE MIEMBRO INFERIOR POR ACCIDENTES DE MOTOCICLETA">
+							<a href="./assets/pdf/accidentes_fracturas_expuestas_guatemala.pdf" title="FRACTURAS ABIERTAS DE MIEMBRO INFERIOR POR ACCIDENTES DE MOTOCICLETA" target="_lank" rel="noopener nofollow">
 								Fracturas abiertas de miembro inferior por accidentes de motocicleta
 							</a>
 						</li>
 						<li class="ref_item">
-							<a href="./assets/pdf/EAP_Acctraf20.pdf" title="ESTADÍSTICAS A PROPÓSITO DEL DÍA MUNDIAL EN RECUERDO DE LAS VÍCTIMAS DE LOS ACCIDENTES DE TRÁFICO">
+							<a href="./assets/pdf/EAP_Acctraf20.pdf" title="ESTADÍSTICAS A PROPÓSITO DEL DÍA MUNDIAL EN RECUERDO DE LAS VÍCTIMAS DE LOS ACCIDENTES DE TRÁFICO" target="_lank" rel="noopener nofollow">
 								Estadísticas a propósito del día mundial en recuerdo de las víctimas de los accidentes de tráfico
 							</a>
 						</li>
 						<li class="ref_item">
-							<a href="./assets/pdf/ManualOMSCascosesp.pdf" title="Cascos. Manual de seguridad vial para decisores y profesionales">
+							<a href="./assets/pdf/ManualOMSCascosesp.pdf" title="Cascos. Manual de seguridad vial para decisores y profesionales" target="_lank" rel="noopener nofollow">
 								Cascos. Manual de seguridad vial para decisores y profesionales
 							</a>
 						</li>
 						<li class="ref_item">
-							<a href="./assets/pdf/lesiones_mexico_motos.pdf" title="El estado de las lesiones causadas por el tránsito en México: evidencias para fortalecer la estrategia mexicana de seguridad vial">
+							<a href="./assets/pdf/lesiones_mexico_motos.pdf" title="El estado de las lesiones causadas por el tránsito en México: evidencias para fortalecer la estrategia mexicana de seguridad vial" target="_lank" rel="noopener nofollow">
 								El estado de las lesiones causadas por el tránsito en México: evidencias para fortalecer la estrategia mexicana de seguridad vial
 							</a>
 						</li>
@@ -289,22 +289,22 @@
 					<h3>Artículos en internet</h3>
 					<ul class="ref_list">
 						<li class="ref_item">
-							<a href="https://imt.mx/resumen-boletines.html?IdArticulo=429&IdBoletin=160" title="Análisis de la siniestralidad de los usuarios vulnerables en carreteras federales">
+							<a href="https://imt.mx/resumen-boletines.html?IdArticulo=429&IdBoletin=160" title="Análisis de la siniestralidad de los usuarios vulnerables en carreteras federales" target="_lank" rel="noopener nofollow">
 								Análisis de la siniestralidad de los usuarios vulnerables en carreteras federales
 							</a>
 						</li>
 						<li class="ref_item">
-							<a href="https://www.who.int/es/news-room/fact-sheets/detail/road-traffic-injuries" title="Traumatismos causados por el tránsito">
+							<a href="https://www.who.int/es/news-room/fact-sheets/detail/road-traffic-injuries" title="Traumatismos causados por el tránsito" target="_lank" rel="noopener nofollow">
 								Traumatismos causados por el tránsito
 							</a>
 						</li>
 						<li class="ref_item">
-							<a href="https://www.insp.mx/avisos/3889-accidente-motocicleta.html" title="Accidentes en moticicleta">
+							<a href="https://www.insp.mx/avisos/3889-accidente-motocicleta.html" title="Accidentes en moticicleta" target="_lank" rel="noopener nofollow">
 								Accidentes en moticicleta
 							</a>
 						</li>
 						<li class="ref_item">
-							<a href="https://gnpautos.mx/blog/estadisticas-de-accidentes-en-moto-en-mexico/" title="Alarmantes estadísticas de accidentes en moto en México">
+							<a href="https://gnpautos.mx/blog/estadisticas-de-accidentes-en-moto-en-mexico/" title="Alarmantes estadísticas de accidentes en moto en México" target="_lank" rel="noopener nofollow">
 								Alarmantes estadísticas de accidentes en moto en México
 							</a>
 						</li>
@@ -312,7 +312,7 @@
 				</div>
 			</div>
 			<h3>
-				<a href="https://www.figma.com/file/j8YNOXnk1U8OIXEl15HJqE/Gigamap-MotosCDMX?node-id=117%3A6663" title="Gigamapa">
+				<a href="https://www.figma.com/file/j8YNOXnk1U8OIXEl15HJqE/Gigamap-MotosCDMX?node-id=117%3A6663" title="Gigamapa" target="_lank" rel="noopener nofollow">
 					Gigamapa
 				</a>
 			</h3>
